examples/invalid/projects/bad_shader_profile_missing_packet_shape/fabric_plane.ns
mod data FabricPlane {
  fn profile() {
    const window_offset: i64 = 0;
    const uplink_len: i64 = 1;
    const downlink_len: i64 = 1;
    data_bind_core(1);
    let profile_handles: HandleTable = data_handle_table("host=cpu0", "render=shader0");
    let cpu_to_shader: Marker = data_marker("cpu_to_shader");
    let shader_to_cpu: Marker = data_marker("shader_to_cpu");
    let uplink_pipe: Marker = data_marker("uplink_pipe");
    let downlink_pipe: Marker = data_marker("downlink_pipe");
    let uplink_pipe_class: Marker = data_marker("uplink_pipe_class");
    let downlink_pipe_class: Marker = data_marker("downlink_pipe_class");
    let uplink_window_policy: Marker = data_marker("uplink_window_policy");
    let downlink_window_policy: Marker = data_marker("downlink_window_policy");
    let uplink_window: Window = data_immutable_window(window_offset, window_offset, uplink_len);
    let downlink_window: WindowMut = data_copy_window(window_offset, window_offset, downlink_len);
  }
}
